[package]
name = "rust-box"
version = "0.1.0"
edition = "2024"

[dependencies]
tray-icon = "0.24.0"
image = "0.25"
tokio = { version = "1.52", features = ["full", "process"] }
sysinfo = "0.35"
winit = "0.29"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["jobapi2", "handleapi", "processthreadsapi", "winnt", "synchapi"] }