[package]
name = "rust-box"
version = "1.1.1"
edition = "2021"

[dependencies]
tray-icon = "0.24.0"
image = "0.25"
tokio = { version = "1.52", features = ["full", "process"] }
winit = "0.29"
sysinfo = "0.35"
processkit = "0.5"
rfd = "0.14"
chrono = "0.4.45"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
winres = "0.1.12"